--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "bundle": "browserify cli/main.js -o public/bundle.js"
+    "bundle": "browserify cli/main.js -o public/bundle.js -t [ babelify --presets [ es2015 ] ]"
   },
   "dependencies": {
     "body-parser": "^1.17.1",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
     "fhir.js": "0.0.20",
-    "jquery": "^3.2.1"
+    "jquery": "^3.2.1",
+    "load-google-maps-api": "0.0.3"
   },
   "repository": {
     "type": "git",
@@ -23,6 +24,8 @@
   },
   "private": true,
   "devDependencies": {
+    "babel-preset-es2015": "^6.24.1",
+    "babelify": "^7.3.0",
     "browserify": "^14.3.0",
     "nodemon": "^1.11.0"
   }
