--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "express": "^4.15.2",
     "fhir.js": "0.0.20",
     "jquery": "^3.2.1",
-    "load-google-maps-api": "0.0.3"
+    "load-google-maps-api": "0.0.3",
+    "lodash": "^4.17.4"
   },
   "repository": {
     "type": "git",
