Load 100 latest cough locations

--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "fhir.js": "0.0.20",
     "jquery": "^3.2.1",
     "load-google-maps-api": "0.0.3",
-    "lodash": "^4.17.4"
+    "lodash": "^4.17.4",
+    "request": "^2.81.0",
+    "request-promise-native": "^1.0.3"
   },
   "repository": {
     "type": "git",
