--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jquery": "^3.2.1",
     "load-google-maps-api": "0.0.3",
     "lodash": "^4.17.4",
+    "memory-cache": "^0.1.6",
     "request": "^2.81.0",
     "request-promise-native": "^1.0.3"
   },
